# dock

./: DONOTREADME.md  README.md
dock/: package-lock.json  package.json  pnpm-lock.yaml
dock/prisma/: schema.prisma
dock/src/Members/: addMember.ts
dock/src/Token/: createToken.ts
dock/src/Votes/: cast.ts  main.ts  utils.ts
dock/src/app/: layout.tsx  page.tsx  test
dock/src/app/Messages/: messagesoffchain.ts  page.tsx
dock/src/app/Posts/: page.tsx
dock/src/app/vessel/: page.tsx
dock/src/chaos/hooks/: useChaosClient.ts
dock/src/chaos/utils/: chaos.ts  client.ts  (+3 more)
mermaid-man/: .env  .gitignore  package.json  pnpm-lock.yaml  tsconfig.json
mermaid-man/prisma/: client.ts  schema.prisma
mermaid-man/src/: index.ts  schemas.ts  utils.ts
mermaid-man/src/tasks/: channel_created.ts  invitee-vote-finalizer.ts  poll-vote-finalizer.ts  post-token-minter.ts
offchain-backend/: .gitignore  package-lock.json  package.json  pnpm-lock.yaml
offchain-backend/prisma/: schema.prisma
offchain-backend/src/: index.ts
offchain-backend/src/lib/: functions.ts  ptth.ts  schemas.ts
program/: Cargo.toml  solana_vessel_program.json
program/src/: entrypoint.rs  instruction.rs  lib.rs  state.rs
program/src/processor/: add_member.rs  award_community_token.rs  create_content.rs  create_invitation.rs  create_poll.rs  create_specialist_vote.rs  create_task.rs  create_vessel.rs  get_vessels.rs  invite_founding_member.rs  invite_member.rs  invite_specialist_member.rs  mod.rs  request_invite.rs  vote_member_in.rs  vote_member_out.rs  vote_on_post.rs  vote_specialist.rs
(+36 files in other folders)
