[package]
name = "program"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
no-entrypoint = []
test-sbf = []

[dependencies]
borsh = {version = "1.0.0", features = ["derive"]}
chrono = "0.4.31"
solana-program = "1.17.1"

[dev-dependencies]
solana-program-test = "1.17.1"
solana-sdk = "1.17.1"

[lib]
crate-type = ["cdylib", "lib"]

